# frontend-plugins

./: .gitattributes
advancedskeleton/6.6.71/: pyproject.toml
advancedskeleton/6.6.71/scripts/: AdvancedSkeleton.mel
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/Selector/: biped.mel  face.mel
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/Selector/scenes/: biped.ma  face.ma  horse.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/div/: asGallery.ma  asGeometry.ma  asIcons.ma  asMetaHuman.ma  asMotion.ma  asMuscular.ma  asUnreal.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/div/headTopology/: defaultHead.ma  hiHead.ma  loHead.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/div/headTopologyEyeBall/: defaultEyeBall.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/div/headTopologyTeeth/: defaultTeeth.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/div/motionTest/face/: rangeOfMotion.ma  testMotions.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/fitSkeletons/: UE4.ma  UE5.ma  biped.ma  bipedBendy.ma  bipedGame.ma  bird.ma  bug.ma  cat.ma  dinosaur.ma  dragon.ma  fish.ma  gorilla.ma  horse.ma  previs.ma  vehicle.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/fitSkeletonsLimbs/: foot.ma  hand.ma  tail.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/moCapMatchers/: HY-Motion.txt
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/nameMatchers/: CharacterCreator4.ma  MetaHuman.ma  MetaHuman_old.ma  Unreal5.ma
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/picker/: picker.mel
advancedskeleton/6.6.71/scripts/AdvancedSkeletonFiles/picker/pickerFiles/scenes/: biped.ma  face.ma
advancedskeleton/6.6.71/shelf/: shelf_AdvancedSkeleton.mel
dwpicker/1.0.4/: pyproject.toml
fcmhider/2.2.0/: pyproject.toml
ngskintoolsv2/2.4.0/: pyproject.toml
ngskintoolsv2/2.4.0/plug-ins/: ngSkinTools2.mll
redshift/2026.1.0/: pyproject.toml
studiolibrary/2.21.3/: pyproject.toml
(+10 files in other folders)
